Clean up banners and emphasize order submit

--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
             <div id="orderItems" class="order-items"></div>
             <button type="button" id="addOrderItem">添加菜品</button>
           </div>
-          <button type="submit">提交订单</button>
+          <button type="submit" class="order-submit">提交订单</button>
           <p class="feedback" id="orderFeedback"></p>
         </form>
         <div class="orders-view">
@@ -159,10 +159,6 @@
         <ul id="staffList" class="staff-list"></ul>
       </section>
     </main>
-
-    <footer>
-      <small>前端示例仅用于课程作业演示，数据在服务器重启后会重置。</small>
-    </footer>
 
     <script src="app.js"></script>
   </body>
